# CDT-test

./: .appveyor.yml  .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
.github/workflows/: codeql-analysis.yml  linux-clang.yml  linux-gcc.yml  macos.yml
cmake/: Cache.cmake  StandardProjectSettings.cmake
include/: Ergodic_moves_3.hpp  Foliated_triangulation.hpp  Geometry.hpp  Manifold.hpp  Move_command.hpp  Move_tracker.hpp  S3Action.hpp  Settings.hpp  Simulation.hpp  Sphere_d.hpp  Torus_d.hpp  Triangulation_traits.hpp  Utilities.hpp
scripts/: build.sh  clang-tidy.sh  cppcheck.sh
src/: CMakeLists.txt  initialize.cpp
tests/: Apply_move_test.cpp  CMakeLists.txt  Foliated_triangulation_test.cpp  Geometry_test.cpp  Manifold_test.cpp  S3Action_test.cpp  Settings_test.cpp  Sphere_test.cpp  Tetrahedron_test.cpp  Torus_test.cpp  Utilities_test.cpp  VertexTest.cpp  Vertex_test.cpp  main.cpp
tools/: build.sh
